--- a/pablo-garcia-portfolio/src/navbarfiles/about/about.css
+++ b/pablo-garcia-portfolio/src/navbarfiles/about/about.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Abril Fatface';
+    font-size: 22px;
+}
+/*nav*/
+
 nav{
     display: -webkit-flex;
     display: -moz-flex;
@@ -8,6 +17,20 @@ nav{
     align-items: center;
     min-height: 10vh;
     background: #590040;
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+.content {
+    padding: 16px;
+}
+.sticky + .content {
+    padding-top: 60px;
 }
 .logo {
     color: #fffcd6;
@@ -66,6 +89,7 @@ nav{
 @media screen and (max-width:768px){
     body{
         overflow-x: hidden;
+        background-color: #fffcd6;
     }
     .menu{
         position: absolute;
@@ -86,5 +110,151 @@ nav{
     }
     .bar{
         display: block;
+    }
+}
+body {
+    width:100%;
+    height:auto;
+  }
+
+html, body {
+    text-align: center;
+    background-image: url('/pablo-garcia-portfolio/src/assets/Stacked\ Wave\ \(1\).svg');
+    height: 100%;
+    overflow: scroll;
+    height: 100%;
+    margin: auto;
+    width: 100%;
+    
+
+  }
+  .shape {
+    stroke-dasharray: 140 540;
+    stroke-dashoffset: -474;
+    stroke-width: 8px;
+    fill: transparent;
+    stroke: lemonchiffon;
+    border-bottom: 5px solid black;
+    transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+  }
+  .text {
+    font-family: 'Abril Fatface';
+    font-size: 28px;
+    line-height: 32px;
+    letter-spacing: 8px;
+    color: lemonchiffon;
+    top: -48px;
+    position: relative;
+  }
+  .svg-wrapper:hover .shape {
+    stroke-width: 2px;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 760;
+}
+.nav-active{
+    transform: translateX(-100%);
+}
+.bar-active .bar-1{
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.bar-active .bar-2{
+    opacity: 0;
+}
+.bar-active .bar-3{
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+.center{
+    background-color: #fffcd6;
+    border-radius: 30px;
+    width: 700px;
+    margin:auto;
+}
+
+.banner {
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.content h2 {
+    color: #590040;
+    font-size: 35px;
+    background-color: #fffcd6;
+}
+h3{color: #590040;
+    font-size: 20px;
+
+}
+  .content p {
+    width: 50%;
+    color: #590040;
+    font-size: 20px;
+    font-family: 'Abril Fatface';
+    word-spacing: 4px;
+    margin:auto; 
+    vertical-align: middle;
+    line-height: 2;
+    background-color: #fffcd6;
+}
+  .content a {
+    /*background: rgb(101, 206, 241);*/
+    text-decoration: none;
+    padding: 15px 30px;
+    color:#A91CF7;
+    display: inline-block;
+    margin-top: 20px;
+    background-color: #fffcd6;
+  }
+  
+  .wrapper {
+    width: 1060px;
+    padding-top: 400px;
+    padding-bottom: 100px;
+    margin: auto;
+    padding-top: 12%;
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 991px){
+    .wrapper {
+        width: 75%;
+        padding-top: 26%;
+        margin:auto;
+    }
+    .content{
+        text-align: center;
+        background-color: #fffcd6;
+        margin:auto;
+    }
+    .content h2 {
+        font-size: 30px;
+        background-color: #fffcd6;
+        margin:auto;
+    }
+    .content p {
+        width: 100%;
+        background-color: #fffcd6;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .banner {
+        background-position: 60%;
+    }
+    .wrapper {
+        width: 75%;
+        padding-top: 26%;
+        margin:auto;
+    }
+    .content h2 {
+        font-size: 30px;
+        background-color: #fffcd6;
+        margin:auto;
+    }
+    .content p {
+        width: 100%;
+        background-color: #fffcd6;
+        margin:auto;
     }
 }
